--- a/app/src/main/res/navigation/nav_drawer.xml
+++ b/app/src/main/res/navigation/nav_drawer.xml
@@ -33,6 +33,8 @@
         <argument
             android:name="ganador"
             app:argType="string"
-            android:defaultValue=""/>
+            app:nullable="true"
+            android:defaultValue="@null"/>
     </fragment>
+
 </navigation>
